--- a/_site.yml
+++ b/_site.yml
@@ -5,10 +5,12 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<you@youremail.com>
     - icon: fa-github fa-lg
-      href: http://github.com/jdv2118/
+      href: http://github.com/bst-p8105/
 output:
   html_document:
     theme: cerulean
